# connectedhomeip-os

./: foo.py
config/nrfconnect/: args.gni
examples/pigweed-app/nrfconnect/: CMakeLists.txt  prj.conf
examples/pigweed-app/nrfconnect/main/: PwNetworkTestHelpers.cpp  main.cpp  pigweed_test.options  pigweed_test.proto
examples/pigweed-app/nrfconnect/main/include/: CHIPProjectConfig.h  PwNetworkTestHelpers.h
src/lib/core/: BUILD.gn  core.gni
src/lib/support/: BUILD.gn
src/lib/support/logging/: CHIPLoggingLogV.cpp
